--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
 	"type": "module",
 	"dependencies": {
 		"cbmp": "^1.1.1"
+	},
+	"scripts": {
+		"clean": "rm -rf bin bitmaps hyprcursor-build dist",
+		"render": "npx cbmp render.json"
 	}
 }
